Started refactoring pretty much everything