@@ -4,7 +4,7 @@ import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 import com.google.gson.JsonElement;
 import com.google.gson.JsonParser;
-import com.google.gson.internal.Primitives;
+import org.bukkit.Location;
 import org.bukkit.plugin.Plugin;
 
 import java.io.File;
@@ -15,27 +15,28 @@ import java.io.IOException;
  */
 public class Config
 {
-	private String name;
-	private String filename;
+	private final String name;
+	private final String filename;
 	private Object configData;
-	private Class clazz;
-	private Plugin p;
+	private Class<?> clazz;
+	private final Plugin p;
 
 	public Config(String name, Plugin p)
 	{
 		this.name = name;
-		this.filename = name + ".json";
+		filename = name + ".json";
 		this.p = p;
 	}
 
-	public void setConfigObject(Class classOfT)
+	public Config setConfigObject(Class<?> classOfT)
 	{
-		this.clazz = classOfT;
+		clazz = classOfT;
+		return this;
 	}
 
 	public void setConfigData(Object o)
 	{
-		this.configData = o;
+		configData = o;
 	}
 
 	public void loadConfig()
@@ -43,19 +44,19 @@ public class Config
 		try
 		{
 			if (!p.getDataFolder().exists())
-				p.getLogger().info("Creation du dossier de config : " + (p.getDataFolder().mkdir() ? "ok" : "erreur")
+				p.getLogger().info("Creation du dossier de config: " + (p.getDataFolder().mkdir() ? "ok" : "erreur")
 						+ " !");
 			File f = new File(p.getDataFolder(), filename);
 			if (!f.exists())
-				p.getLogger().info("Creation du ficher de config : " + (f.createNewFile() ? "ok" : "erreur") + " !");
+				p.getLogger().info("Creation du ficher de config: " + (f.createNewFile() ? "ok" : "erreur") + " !");
 			String json = Utils.readFile(f);
 			configData = new Gson().fromJson(json, clazz);
 			if (configData == null)
-				configData = clazz.newInstance();
+				configData = clazz.getConstructor().newInstance();
 		}
-		catch (IOException | InstantiationException | IllegalAccessException e)
+		catch (IOException | ReflectiveOperationException e)
 		{
-			e.printStackTrace();
+			throw new ConfigException("Cannot load config", e);
 		}
 	}
 
@@ -64,20 +65,25 @@ public class Config
 		try
 		{
 			if (!p.getDataFolder().exists())
-				p.getLogger().info("Creation du dossier de config : " + (p.getDataFolder().mkdir() ? "ok" : "erreur")
+				p.getLogger().info("Creation du dossier de config: " + (p.getDataFolder().mkdir() ? "ok" : "erreur")
 						+ " !");
+
 			File f = new File(p.getDataFolder(), filename);
 			if (!f.exists())
-				p.getLogger().info("Creation du ficher de config : " + (f.createNewFile() ? "ok" : "erreur") + " !");
-			Gson gson = new GsonBuilder().setPrettyPrinting().create();
+				p.getLogger().info("Creation du ficher de config: " + (f.createNewFile() ? "ok" : "erreur") + " !");
+
+			Gson gson = new GsonBuilder().setPrettyPrinting()
+					.registerTypeHierarchyAdapter(Location.class, LocationAdapter.INSTANCE).create();
+
 			JsonParser jp = new JsonParser();
 			JsonElement je = jp.parse(gson.toJson(configData));
+
 			String json = gson.toJson(je);
 			Utils.writeText(f, json);
 		}
 		catch (IOException e)
 		{
-			e.printStackTrace();
+			throw new ConfigException("Cannot save config", e);
 		}
 	}
 
@@ -88,6 +94,6 @@ public class Config
 
 	public <T> T get(Class<T> clazz)
 	{
-		return Primitives.wrap(clazz).cast(configData);
+		return clazz.cast(configData);
 	}
 }
